--- a/public/index.css
+++ b/public/index.css
@@ -8,7 +8,7 @@
 @tailwind utilities;
 
 @layer utilities {
-    body::-webkit-scrollbar {
+    *::-webkit-scrollbar {
         display: none;
         -ms-overflow-style: none; /* IE and Edge */
         scrollbar-width: none; /* Firefox */
